--- a/service/vlogs/deploy/manifests/deploy.yaml
+++ b/service/vlogs/deploy/manifests/deploy.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    app: launchpad-vlogs
-  name: launchpad-vlogs-config
+    app: service-vlogs
+  name: service-vlogs-config
   namespace: sealos
 
 data:
@@ -15,32 +15,29 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: launchpad-vlogs
-  name: launchpad-vlogs-deployment
+    app: service-vlogs
+  name: service-vlogs-deployment
   namespace: sealos
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: launchpad-vlogs
+      app: service-vlogs
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: launchpad-vlogs
+        app: service-logs
     spec:
       containers:
         - args:
             - /config/config.yml
           command:
             - /manager
-          env:
-            - name: VM_SERVICE_HOST
-              value: http://vmsingle-victoria-metrics-k8s-stack.vm.svc:8429
           image: ghcr.io/labring/sealos-launchpad-service:latest
           imagePullPolicy: Always
-          name: vlogs-monitor
+          name: service-vlogs
           ports:
             - containerPort: 8428
               protocol: TCP
@@ -67,15 +64,15 @@ spec:
       volumes:
         - configMap:
             defaultMode: 420
-            name: launchpad-monitor-config
+            name: service-vlogs-config
           name: config-vol
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: launchpad-vlogs
-  name: launchpad-vlogs
+    app: service-vlogs
+  name: service-vlogs
   namespace: sealos
 spec:
   ports:
@@ -84,4 +81,4 @@ spec:
       protocol: TCP
       targetPort: 8428
   selector:
-    app: launchpad-vlogs
+    app: service-vlogs
