--- a/service/vlogs/deploy/manifests/deploy.yaml
+++ b/service/vlogs/deploy/manifests/deploy.yaml
@@ -55,6 +55,9 @@ spec:
             runAsNonRoot: true
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
+          env:
+            - name: WHITELIST_KUBERNETES_HOSTS
+              value: "https://usw.sailos.io:6443"
           volumeMounts:
             - mountPath: /config
               name: config-vol
