--- a/.github/workflows/services.yml
+++ b/.github/workflows/services.yml
@@ -184,7 +184,7 @@ jobs:
     strategy:
       matrix:
         ## TODO: add more modules
-        module: [database, pay, account, minio, launchpad, exceptionmonitor, aiproxy]
+        module: [database, pay, account, minio, launchpad, exceptionmonitor, aiproxy, vlogs]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
